8316933: RISC-V: compiler/vectorapi/VectorCastShape128Test.java fails when using RVV